--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -76,19 +76,19 @@
     <None Include="wwwroot\Assets\Js\validate.js" />
     <None Include="wwwroot\Assets\Js\vegas.js" />
     <None Include="wwwroot\Assets\Js\video.js" />
-    <None Include="wwwroot\Includes\contact\contact-process.php" />
+    <None Include="wwwroot\Includes\Contact\contact-process.php" />
     <None Include="wwwroot\Includes\Rev-slider\Css\closedhand.123" />
     <None Include="wwwroot\Includes\Rev-slider\Css\openhand.123" />
-    <None Include="wwwroot\Includes\Rev-slider\fonts\revicons\revicons90c6.svg" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.actions.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.carousel.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.kenburn.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.layeranimation.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.migration.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.navigation.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.parallax.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.slideanims.min.js" />
-    <None Include="wwwroot\Includes\Rev-slider\Js\extensions\revolution.extension.video.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Fonts\Revicons\revicons90c6.svg" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.actions.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.carousel.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.kenburn.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.layeranimation.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.migration.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.navigation.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.parallax.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.slideanims.min.js" />
+    <None Include="wwwroot\Includes\Rev-slider\Js\Extensions\revolution.extension.video.min.js" />
     <None Include="wwwroot\Includes\Rev-slider\Js\jquery.themepunch.revolution.min.js" />
     <None Include="wwwroot\Includes\Rev-slider\Js\jquery.themepunch.tools.min.js" />
   </ItemGroup>
