--- a/ConstructionSite.Repository/ConstructionSite.Repository.csproj
+++ b/ConstructionSite.Repository/ConstructionSite.Repository.csproj
@@ -18,9 +18,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+    <PackageReference Include="MimeKit" Version="2.9.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConstructionSite.DTO\ConstructionSite.ViwModel.csproj" />
     <ProjectReference Include="..\ConstructionSite.Entity\ConstructionSite.Entity.csproj" />
     <ProjectReference Include="..\ConstructionSite.Helpers\ConstructionSite.Helpers.csproj" />
   </ItemGroup>
