--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -2,6 +2,7 @@
 
  <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+   <EnableMSDeployAppOffline>true</EnableMSDeployAppOffline>
     <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
   <AspNetCoreHostingModel>InProsses</AspNetCoreHostingModel>
   </PropertyGroup>
