--- a/ConstructionSite.Interfaces/ConstructionSite.Interfaces.csproj
+++ b/ConstructionSite.Interfaces/ConstructionSite.Interfaces.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\ConstructionSite.DTO\ConstructionSite.ViwModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
