--- a/ConstructionSite/appsettings.json
+++ b/ConstructionSite/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "ConstructionSite": "Data Source=SQL5063.site4now.net;Initial Catalog=DB_A50C2A_ConstructionSite;User Id=DB_A50C2A_ConstructionSite_admin;Password=Construction123"
-   
+    //"ConstructionSite": "Data Source=SQL5063.site4now.net;Initial Catalog=DB_A50C2A_ConstructionSite;User Id=DB_A50C2A_ConstructionSite_admin;Password=Construction123",
+    "ConstructionSite": "Data Source=.;Initial Catalog=ConstructionSite;Integrated Security=true"
+
   },
   
   "Logging": {
