--- a/ConstructionSite.Facade/ConstructionSite.Facade.csproj
+++ b/ConstructionSite.Facade/ConstructionSite.Facade.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ConstructionSite.DTO\ConstructionSite.ViwModel.csproj" />
     <ProjectReference Include="..\ConstructionSite.Extensions\ConstructionSite.Extensions.csproj" />
-    <ProjectReference Include="..\ConstructionSite.Interfaces\ConstructionSite.Interfaces.csproj" />
+    <ProjectReference Include="..\ConstructionSite.Interface\ConstructionSite.Interface.csproj" />
     <ProjectReference Include="..\ConstructionSite.Repository\ConstructionSite.Repository.csproj" />
   </ItemGroup>
 
