--- a/ConstructionSite/appsettings.json
+++ b/ConstructionSite/appsettings.json
@@ -8,8 +8,8 @@
     "Password": "specify your password here"
   },
   "ConnectionStrings": {
-    "ConstructionSite": "Data Source=SQL5063.site4now.net;Initial Catalog=DB_A50C2A_ConstructionSite;User Id=DB_A50C2A_ConstructionSite_admin;Password=Construction123"
-    //"ConstructionSite": "Data Source=.;Initial Catalog=ConstructionSite;Integrated Security=true"
+    //"ConstructionSite": "Data Source=SQL5063.site4now.net;Initial Catalog=DB_A50C2A_ConstructionSite;User Id=DB_A50C2A_ConstructionSite_admin;Password=Construction123"
+    "ConstructionSite": "Data Source=DESKTOP-3B93ABP\\MSSQLS;Initial Catalog=ConstructionSite;Integrated Security=true"
 
   },
 
