--- a/ConstructionSite.Interface/ConstructionSite.Interface.csproj
+++ b/ConstructionSite.Interface/ConstructionSite.Interface.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\ConstructionSite.Entity\ConstructionSite.Entity.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
