--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Shared\Components\GaleryVideos\" />
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
   </ItemGroup>
 
